First stable build need to fix things: burger menu overflow

--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,12 @@ h1, h2, h3, h4, h5, h6 {
           justify-content: space-between;
 }
 
+@media (max-width: 319.98px) {
+  .burger__content .services__search {
+    width: 270px;
+  }
+}
+
 .burger__content .services-links {
   display: block;
   line-height: 30px;
@@ -695,6 +701,18 @@ h1, h2, h3, h4, h5, h6 {
           justify-content: space-between;
 }
 
+@media (max-width: 1413.98px) {
+  .intro {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .intro__img-block {
   margin-left: -4.1%;
   position: relative;
@@ -777,6 +795,20 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 19px;
 }
 
+@media (max-width: 1413.98px) {
+  .intro__form-title {
+    padding-top: 100px;
+  }
+}
+
+@media (max-width: 479.98px) {
+  .intro__form-title {
+    padding: 40px 5px 0 5px;
+    font-size: 30px;
+    padding-top: 100px;
+  }
+}
+
 .intro__form-subtitle {
   font-weight: 300;
   font-size: 14px;
@@ -785,12 +817,26 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 380px;
 }
 
+@media (max-width: 479.98px) {
+  .intro__form-subtitle {
+    padding: 0 5px 0 5px;
+  }
+}
+
 .intro__form-user-data {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
   row-gap: 1em;
+}
+
+@media (max-width: 479.98px) {
+  .intro__form-user-data {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    padding-left: 3%;
+  }
 }
 
 .form-info {
@@ -845,6 +891,12 @@ h1, h2, h3, h4, h5, h6 {
 .slide-bar__hexagon:first-child {
   color: #ea5800;
   font-size: 20px;
+}
+
+@media (max-width: 479.98px) {
+  .slide-bar__hexagon {
+    padding-left: 3%;
+  }
 }
 
 .intro__modules {
@@ -909,8 +961,26 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 auto;
 }
 
+@media (max-width: 999.98px) {
+  .main__access-section {
+    padding: 10% 0 10% 0;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 550px;
+  }
+}
+
 .access-section__hexagons {
   position: relative;
+}
+
+@media (max-width: 999.98px) {
+  .access-section__hexagons {
+    left: 0;
+    width: 700px;
+  }
 }
 
 .access-section__hexagon {
